<resources>
    <string name="app_name">Автопарк</string>
    <string name="header_main_activity">База аренды авто</string>
    <string name="btn_output_list">Вывести список</string>
    <string name="btn_change_data">Изменить данные</string>
    <string name="header_changing_data">Изменение БД</string>
    <string name="et_Marka">Марка</string>
    <string name="et_Model">Модель</string>
    <string name="et_year_production">Год производства</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_clear">Очистить</string>
    <string name="btn_exit_main_activity">Вернуться в главное меню</string>
    <string name="header_single_entry_change">Изменение одной записи</string>
    <string name="btn_update">Изменить</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_exit">Назад</string>
    <string name="delete_picture">Удалить картинку</string>
    <string name="textHint">Для изменения или удаления записи кликните на неё</string>
    <string name="headerSearchOpen">Модуль поиска ↑</string>
    <string name="headerSearchClose">Модуль поиска ↓</string>
    <string name="textSearch">Введите значение</string>
    <string name="headerOrder">Сортировка по столбцам</string>
    <string name="btnSearch">Найти</string>
    <string name="deleteSearch">Удалить сортировку и поиск</string>
    <string-array name="fieldsNameSearch">
        <item>Марка</item>
        <item>Модель</item>
        <item>Год производства</item>
    </string-array>
    <string-array name="fieldsName">
        <item></item>
        <item>Марка</item>
        <item>Модель</item>
        <item>Год производства</item>
    </string-array>
    <string-array name="order">
        <item>Возрастание</item>
        <item>Убывание</item>
    </string-array>
</resources>