<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleEntryChange">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_single_entry_change"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/textMarka"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_Marka"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf = "@+id/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textModel"
        />

    <EditText
        android:id="@+id/textModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_Model"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf = "@+id/heading"
        app:layout_constraintStart_toEndOf="@+id/textMarka"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/textYearProduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_year_production"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textModel" />

    <ImageView
        android:id="@+id/Picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:onClick="updatePicture"
        app:layout_constraintBottom_toTopOf="@+id/deletePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textYearProduction" />

    <TextView
        android:id="@+id/deletePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="deletePicture"
        android:text="@string/delete_picture"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        app:layout_constraintBottom_toTopOf="@+id/buttonChanging"
        app:layout_constraintTop_toBottomOf="@+id/Picture"
        tools:layout_editor_absoluteX="10dp" />

    <TableRow
        android:id="@+id/buttonChanging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Exit"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="updateLine"
            android:background="@drawable/batton_background"
            android:text="@string/btn_update" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="deleteLine"
            android:background="@drawable/batton_background"
            android:text="@string/btn_delete" />
    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="Exit"
        android:background="@drawable/batton_background"
        android:text="@string/btn_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>