<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/absence"/>

    <TextView
        android:id="@+id/textMarka"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/et_Marka"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/et_Model"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textMarka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture" />

    <TextView
        android:id="@+id/textYearProduction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/et_year_production"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture" />

</androidx.constraintlayout.widget.ConstraintLayout>