<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/header_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/buttonChanging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/OutputList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/batton_background"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:onClick="GetTextFromSql"
            android:text="@string/btn_output_list" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/InsertList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/batton_background"
            android:onClick="GoChange"
            android:text="@string/btn_change_data"/>
    </TableRow>

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChanging"
        android:layout_weight="1"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/List"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp">

        </TableLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>